# experiment

./: .gitignore  .gitmodules  experiment.code-workspace
components/graphql/: server.js
components/mongodb/: main.js  package-lock.json  package.json  test.js
cpp/: CMakeLists.txt
cpp/abi/: lib.cpp
cpp/boost/: CMakeLists.txt
cpp/boost/asio/: main.cpp
cpp/boost/uuid/: CMakeLists.txt  uuid_boost.cpp
cpp/common/: calculate_performence.cpp  util.cpp  util.hpp
cpp/google-test/: CMakeLists.txt  google-test.cpp
cpp/json/: json_test.cpp
cpp/lib/linux/: libso.cpp  libso_2.cpp  main.cpp
cpp/lib/win/: libfun.h  main.cpp  util.cpp  util.h
cpp/net/basic/: client_basic.c  server_basic.c
cpp/net/byteorder/: CMakeLists.txt  main.cpp
cpp/net/fork_tcp_server/: server4.c
cpp/net/sample/: tcp-port-unreachable.pcap
cpp/net/select/: server5_select_many_client.c
cpp/net/udp/: udp_getdata.c
cpp/standard/: CMakeLists.txt  initializer_list.cpp  language.cpp  log.txt  main.cpp
cpp/standard/c++11/: function.cpp  lambda.cpp  move_test.cpp  smart-point.cpp  thread_promise_container.cpp
cpp/standard/c++11/bak/: common_solve_intermediate_state_ut_problem_thread.cpp
cpp/standard/c++17/: fold-expression.cpp
cpp/standard/class/: class.cpp
cpp/standard/construct/: construct.cpp
cpp/standard/cout/: main.cpp
cpp/standard/iterator/: test.cpp
cpp/standard/macro/: main.cpp  main.i
cpp/standard/point/: CMakeLists.txt  main.cpp
cpp/standard/string/: aoffer.hpp  boffer.hpp  main.cpp
cpp/standard/time/: time.cpp
cpp/test_vs/: testcpp.sln
cpp/work/product_test/: CMakeLists.txt  main.cpp
dart/: .packages  main.dart  pubspec.yaml  stream.dart  websocketwrap.dart
dart/.dart_tool/: package_config.json
dart/auto_test/: main.dart
dart/singleton/: global_data.dart
devops/: launchdarkly.md
flutter/: pubspec.yaml
flutter-bak/state/: future_provier_simple.dart  inherited_change_status.dart  inherited_simple.dart  multi_provider_simple.dart  provider_simple.dart  proxy_provider.dart  scope_model_simple.dart  stream_provider_simple.dart
flutter-skeleton/app/: README.md  pubspec.yaml
flutter/android/: .project
flutter/android/app/: build.gradle
flutter/lib/: derived_widget.dart  main.dart  main_badge.dart  validator.dart  widget_key.dart
flutter/test/: widget_test.dart
flutter/web/: index.html  manifest.json
flutter_components/oauth_test/: pubspec.yaml
flutter_mediasoup_app/: README.md  pubspec.yaml
flutter_mediasoup_app/android/: .project
flutter_mediasoup_app/test/: widget_test.dart
flutter_mediasoup_app/web/: index.html  manifest.json
flutter_mediasoup_app/windows/: CMakeLists.txt
go/: main.go
java/: main.java
js/: index.html  main.js
k8s/: nginxsecrets.yaml
lua/: test.lua
markdown/: test.md
nodejs/: compress_resource.js  generateJson.js  main.js  package-lock.json  package.json  resource.json  uncompress_and_rename_preview.js
python/: test.py
python/asyncio/: test.py
python/lib/: util.py
python/redis/: test.lua  test.py
react/: index.jsx
ts/: tsconfig.json
webrtc/cpp/: CMakeLists.txt  main.cpp
webrtc/js/: .jshintrc  main.js
(+80 files in other folders)
